依存の変更

--- a/using_native/pubspec.yaml
+++ b/using_native/pubspec.yaml
@@ -1,5 +1,5 @@
 name: using_native
-description: "A new Flutter project."
+description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.5 <4.0.0'
+  sdk: '>=2.19.2 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,13 +35,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  google_fonts: ^6.1.0
-  flutter_riverpod: ^2.4.9
-  image_picker: ^1.0.7
-  google_maps_flutter: ^2.5.3
-  location: ^5.0.3
-  sqflite: ^2.3.1
-  uuid: ^4.3.3
+  google_fonts: ^4.0.3
+  uuid: ^3.0.7
+  flutter_riverpod: ^2.3.2
+  image_picker: ^0.8.7+1
+  location: ^4.4.0
+  http: ^0.13.5
+  google_maps_flutter: ^2.2.5
+  path_provider: ^2.0.14
+  path: ^1.8.2
+  sqflite: ^2.2.6
 
 dev_dependencies:
   flutter_test:
