--- a/using_native/pubspec.yaml
+++ b/using_native/pubspec.yaml
@@ -39,12 +39,13 @@ dependencies:
   uuid: ^3.0.7
   flutter_riverpod: ^2.3.2
   image_picker: ^0.8.7+1
-  location: ^4.4.0
+  location: ^5.0.3
   http: ^0.13.5
   google_maps_flutter: ^2.2.5
   path_provider: ^2.0.14
-  path: ^1.8.2
+  path: ^1.8.3
   sqflite: ^2.2.6
+  dotenv: ^4.2.0
 
 dev_dependencies:
   flutter_test:
