--- a/using_native/.gitignore
+++ b/using_native/.gitignore
@@ -46,7 +46,7 @@ app.*.map.json
 lib/consts.dart
 *.env
 
-/android/secret.properties
+android/secret.properties
 
 # iOS
-/ios/Runner/Environment.swift
+ios/Runner/Environment.swift
